Kubernetes/Logger/logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-deployment
spec:
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: logger
        image: datalust/seq:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: logger-port
---
apiVersion: v1
kind: Service
metadata:
  name: logger-service
spec:
  type: NodePort
  selector:
    app: logger
  ports:
  - port: 5341
    targetPort: logger-port
    nodePort: 31002
