Kubernetes/Logger/logger-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logger-ingress
  labels:
    name: logger-ingress
spec:
  rules:
  - host: logger.bookvacation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: logger-service
            port: 
              name: logger-port
